# coins-for-change-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  TASK_2.1_COMPLETION_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml
.kiro/hooks/: markdown-lint-fix.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/coins-for-change-platform/: design.md  requirements.md  tasks.md
.kiro/steering/: Context7.md  api-design-standards.md  business-rules.md  coding-standards.md  deployment-guide.md  development-workflow.md  tech-stack.md
alembic/: env.py
config/: prometheus.yml
docs/: MCP-Implementation-Summary.md  README-MCP-Setup.md  database-setup.md  mcp-server-configuration.md  mcp-status-summary.md
helm/: values-postgresql.yaml
helm/coins-for-change/: Chart.yaml  values.yaml
helm/coins-for-change/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  migration-job.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: app-configmap.yaml  app-deployment.yaml  app-secret.yaml  app-service.yaml  database-test-job.yaml  migration-job.yaml  namespace.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
scripts/: cleanup_k8s.sh  deploy_bitnami_postgres.sh  deploy_postgres_only.sh  deploy_to_k8s.sh  deploy_with_helm.sh  dev-setup.sh  init-db.sql  run-services.sh  seed_database.py  setup-mcp-servers.sh  test-mcp-servers.py  test_database_connection.py  validate-setup.py  validate_database_setup.py
src/: __init__.py  main.py
src/services/analytics/: __init__.py  main.py
src/services/auth/: main.py
src/services/campaigns/: __init__.py  main.py
src/services/coins/: __init__.py  main.py
src/services/ideas/: __init__.py  main.py
src/services/notifications/: main.py
src/services/search/: __init__.py  main.py
src/shared/: config.py  health.py  middleware.py
src/shared/auth/: utils.py
src/shared/database/: __init__.py  base.py  connection.py  repository.py  transactions.py
src/shared/logging/: __init__.py  config.py
src/shared/validation/: __init__.py  schemas.py
tests/: conftest.py
tests/integration/: test_database_integration.py  test_services_health.py
tests/unit/: test_auth_utils.py  test_config.py  test_database_connection.py  test_external_services.py
